src/tests/keep_parsing_1.qd
// TEST: compilation_should_fail 'Выражение невычислимо на этапе компиляции: в качестве размера массива ожидается константное выражение'

void _start() of
	word A1[10];
	word a1 = const_expr(A1[0] + 1);      // error
	word a2 = const_expr(A1[0] + A1[1]);  // error
	word a3 = const_expr(1 / 0);          // error
	word A2[a3];                          // error
end
